--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,7 +2,8 @@
     <string name="app_name" translatable="false">MovieApplication</string>
     <string name="main_text">What will you watch ?</string>
     <string name="recommended_movies">Recommended</string>
-    <string name="new_movies">New</string>
+    <string name="popular_movies">Popular</string>
     <string name="hint_text_search">Enter name</string>
-    <string name="any">Any...</string>
+    <string name="any">Any…</string>
+    <string name="not_found">Nothing found</string>
 </resources>
