--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,5 @@
     <string name="Release">Release</string>
     <string name="Runtime">Runtime</string>
     <string name="Country">County</string>
+    <string name="Revenue">Revenue</string>
 </resources>
