--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,4 +15,5 @@
     <string name="counties">Countries</string>
     <string name="h">h</string>
     <string name="min">min</string>
+    <string name="storyline">Storyline</string>
 </resources>
